# nba-predict

./: .env.example  .gitignore  .prettierignore  AGENTS.md  Bet365SignalConsole.tsx  CLAUDE.md  MARKET_INCIDENT_HANDOFF_PROMPT.md  NEXT_AGENT_HANDOFF_PROMPT.md  PLAN.md  README.md  SUSPEND_SIGNAL_HANDOFF_PROMPT.md  TODO.md  bet365_nba_signal_console_memo.docx  bet365_nba_signal_console_proposal.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts  vitest.setup.ts
.codex/: hooks.json
.docs-archive/2026-05-repo-audit/: MARKET_INCIDENT_HANDOFF_PROMPT.md  README.md
apps/nba-sidecar/: pyproject.toml
apps/nba-sidecar/src/nba_sidecar/: __init__.py  main.py  models.py  normalizers.py  service.py
apps/nba-sidecar/tests/: test_normalizers.py
docs/: bet365-internal-dump-schema.md  board-state-inventory.md  demo-runbook.md  fanduel-draftkings-provider-scorecard.md  live-db-handoff.md  market-anomaly-endpoint-scorecard.md  market-incident-report-format.md  product-readiness-gap-analysis.md  traceability-matrix.md
scripts/: audit-live-db.mjs  bakeoff.py  board_signal_v2.py  build_universal_source_trust_report.ts  lead_vs_pricehist.py  probe-reconcile.ts  probe_pbp.py  probe_recon_dist.py  render_universal_source_trust_report.ts  suspend_signal_backtest.py  temporary-auth-proxy.mjs
specs/: 00-repo-audit.md  01-product-requirements.md  02-ux-spec.md  03-architecture-spec.md  04-data-contracts.md  05-api-spec.md  06-signal-engine-spec.md  06b-board-anomaly-model.md  07-test-plan.md  08-delivery-plan.md  09-assumptions-and-open-questions.md
(+1582 files in other folders)
