[project]
name = "nba-sidecar"
version = "0.1.0"
description = "Python nba_api sidecar for normalized NBA game-state, box score, and play-by-play payloads."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "nba_api>=1.11.4,<2",
  "pydantic>=2.11,<3",
  "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
